# FedLearn-Platform

./: README.md
framework/: CONTRIBUTING.md  README.md  pyproject.toml  setup.py  test.desc
framework/docs/: installation.md  quickstart.md
framework/docs/api-reference/: architecture.md  core-modules.md
framework/examples/ecg_decomfl_central/: README.md  config.py  run_client.py  run_server.py
framework/examples/ecg_decomfl_central/checkpoints/: model_final.pth  model_round_100.pth  model_round_50.pth
framework/examples/ecg_decomfl_central/data_splits/: ecg_clients1_alpha0.5_frac1.0_seed42.pkl
framework/examples/ecg_decomfl_central/results/: training_history.npz
framework/examples/ecg_decomfl_framework_integration/: config.py  model.py  results_ECG_20260122_161425_2_clients.csv  run_client.py  run_server.py
framework/examples/ecg_decomfl_framework_integration/data_splits/: ecg_clients5_alpha0.5_frac1.0_seed42.pkl
framework/examples/ecg_decomfl_multiclient/: data.py  model.py
framework/examples/ecg_federation/: config.py  data.py  results_ecg_20251208_192721_10_clients.csv  results_ecg_20251208_193441_10_clients.csv  run_client.py
framework/examples/llm_federation/: config.py  data.py  run_client.py
framework/examples/llm_federation/data_splits/: cb_clients2_alpha1.0_frac1.0.pkl  cb_clients3_alpha1.0_frac1.0.pkl  cb_clients4_alpha1.0_frac1.0.pkl  sst2_clients2_alpha1.0_frac1.0.pkl
framework/examples/simple_federation/: data.py  model.py  run_client.py  run_server_debug.py
framework/src/fedlearn/client/: __init__.py  client.py  grpc_client.py
(+115 files in other folders)
